--- a/Hng_Stage1_BackendTrack/Hng_Stage1_BackendTrack.csproj
+++ b/Hng_Stage1_BackendTrack/Hng_Stage1_BackendTrack.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>0d7e6acb-a7c5-408a-b123-faf2b01a3ee9</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>.</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
