--- a/Hng_Stage1_BackendTrack/Dockerfile.original
+++ b/Hng_Stage1_BackendTrack/Dockerfile.original
@@ -12,10 +12,10 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Hng_Stage1_BackendTrack.csproj", "."]
-RUN dotnet restore "./Hng_Stage1_BackendTrack.csproj"
+COPY ["Hng_Stage1_BackendTrack/Hng_Stage1_BackendTrack.csproj", "Hng_Stage1_BackendTrack/"]
+RUN dotnet restore "./Hng_Stage1_BackendTrack/Hng_Stage1_BackendTrack.csproj"
 COPY . .
-WORKDIR "/src/."
+WORKDIR "/src/Hng_Stage1_BackendTrack"
 RUN dotnet build "./Hng_Stage1_BackendTrack.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
